--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.0",
+    "mongoose-beautiful-unique-validation": "^5.0.1",
     "morgan": "^1.7.0"
   }
 }
