--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/JulesJam/meet2eat#readme",
   "dependencies": {
+    "angular-resource": "^1.5.8",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.0",
     "mongoose-beautiful-unique-validation": "^5.0.1",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "ui-router": "^1.0.0-alpha.3"
   }
 }
