--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "angular-resource": "^1.5.8",
     "bcrypt": "^0.8.7",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
@@ -26,6 +27,9 @@
     "mongoose": "^4.6.0",
     "mongoose-beautiful-unique-validation": "^5.0.1",
     "morgan": "^1.7.0",
+    "request": "^2.74.0",
+    "request-promise": "^4.1.1",
+    "satellizer": "^0.15.5",
     "ui-router": "^1.0.0-alpha.3"
   }
 }
