--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
     "satellizer": "^0.15.5",
+    "socket.io": "^1.4.8",
+    "socketio-jwt": "^4.5.0",
     "ui-router": "^1.0.0-alpha.3"
   }
 }
