--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/JulesJam/meet2eat#readme",
   "dependencies": {
     "angular-resource": "^1.5.8",
+    "aws-sdk": "^2.6.2",
     "bcrypt": "^0.8.7",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
@@ -27,12 +28,15 @@
     "mongoose": "^4.6.0",
     "mongoose-beautiful-unique-validation": "^5.0.1",
     "morgan": "^1.7.0",
+    "multer": "^1.2.0",
+    "multer-s3": "^2.3.2",
     "qs": "^6.2.1",
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
     "satellizer": "^0.15.5",
     "socket.io": "^1.4.8",
     "socketio-jwt": "^4.5.0",
-    "ui-router": "^1.0.0-alpha.3"
+    "ui-router": "^1.0.0-alpha.3",
+    "uuid": "^2.0.2"
   }
 }
