--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,12 @@
   ],
   "dependencies": {
     "bootstrap": "v4.0.0-alpha.4",
-    "socket.io-client": "^1.4.8"
+    "socket.io-client": "^1.4.8",
+    "angularjs-dropdown-multiselect": "^1.5.2",
+    "lodash": "^4.17.2",
+    "socket.io": "^1.5.1"
+  },
+  "resolutions": {
+    "lodash": "~2.4.1"
   }
 }
